# Legal-Document-Analyzer

./: .gitignore  start.bat
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/: main.py  models.py
backend/src/tools/: clause_extractor.py  document_parser.py  gemini_client.py  risk_scorer.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: analyze.ts
frontend/app/api/health/: route.ts
frontend/app/components/: AppShell.tsx  LegalAnalyzer.tsx  Results.tsx  UploadZone.tsx
frontend/app/lib/: translations.ts  types.ts
